# flask_nuxt_file_updown

./: LICENSE  README.md
flask_server/: app.py  pyproject.toml
nuxt_client/: README.md  nuxt.config.js  package-lock.json  package.json
nuxt_client/components/: UploadFileBase64.vue  UploadFileForm.vue
nuxt_client/pages/: index.vue
