[tool.poetry]
name = "flask_server"
version = "0.1.0"
description = ""
authors = ["uekusa-hideaki <105189342+uekusa-hideaki@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
